walletrpc: add output leases RPCs
